[package]
name = "async_await"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = {version = "0.10", features = ["json"]}
error-chain = "0.12.4"
tokio = { version = "0.2.3", features = ["full"]}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"]}

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "prog1"
path = "src/bin/prog1.rs"

[[bin]]
name = "prog2"
path = "src/bin/prog2.rs"